Replace ANGARA portal with VASKIA portal

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ANGARA | Partnership Portal</title>
+    <title>VASKIA| Partnership Portal</title>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     
     <style>
@@ -142,7 +142,7 @@
 <body>
 
 <div class="container">
-    <span class="logo">ANGARA</span>
+    <span class="logo"VASKIA</span>
     <div class="subtitle">Partnership Invitation Portal</div>
 
     <div class="input-group">
@@ -170,7 +170,7 @@
 <script type="text/javascript">
     // Initialize EmailJS with your Public Key
     (function() {
-        emailjs.init("nD8r7KOg2Y8rcxjIZ"); 
+        emailjs.init("GBJYqAAiiRpnOuKBF"); 
     })();
 
     function sendEmail() {
@@ -202,7 +202,7 @@
         };
 
         // Send to EmailJS
-        emailjs.send("service_igyhlqk", "template_h7dhki6", params)
+        emailjs.send("service_bxcwr7b", "template_6fldhx7", params)
             .then(() => {
                 showStatus("✅ Invitation sent to " + nameValue, "success");
                 // Clear form
@@ -228,4 +228,5 @@
 </script>
 
 </body>
+
 </html>
