--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class="terms-group">
         <input type="checkbox" id="terms_check">
         <label for="terms_check" class="terms-text">
-            I confirm that this invitation is being sent to a verified collaborator and complies with ANGARA's communication terms.
+            I confirm that this invitation is being sent to a verified collaborator and complies with VASKIA's communication terms.
         </label>
     </div>
 
@@ -230,3 +230,4 @@
 </body>
 
 </html>
+
