--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <body>
 
 <div class="container">
-    <span class="logo" VASKIA </span>
+    <span class="logo"> VASKIA </span>
     <div class="subtitle">Partnership Invitation Portal</div>
 
     <div class="input-group">
